--- a/prepros-6.config
+++ b/prepros-6.config
@@ -14,6 +14,10 @@
     {
       "path": "src/less/uikit.less",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/css/uikit.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
+      "path": "src/less/app.less",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/css/app.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
@@ -21,8 +25,8 @@
       "less/app",
       "less",
       "src",
-      "src/less",
-      "src/css"
+      "src/css",
+      "src/less"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -42,6 +46,7 @@
       "imports": [
         "src/less/components/_import.less",
         "src/less/theme/_import.less",
+        "src/less/app.less",
         "src/less/components/variables.less",
         "src/less/components/mixin.less",
         "src/less/components/base.less",
@@ -103,6 +108,142 @@
         "src/less/components/visibility.less",
         "src/less/components/inverse.less",
         "src/less/components/print.less",
+        "src/less/theme/variables.less",
+        "src/less/theme/base.less",
+        "src/less/theme/link.less",
+        "src/less/theme/heading.less",
+        "src/less/theme/divider.less",
+        "src/less/theme/list.less",
+        "src/less/theme/description-list.less",
+        "src/less/theme/table.less",
+        "src/less/theme/icon.less",
+        "src/less/theme/form-range.less",
+        "src/less/theme/form.less",
+        "src/less/theme/button.less",
+        "src/less/theme/section.less",
+        "src/less/theme/container.less",
+        "src/less/theme/grid.less",
+        "src/less/theme/tile.less",
+        "src/less/theme/card.less",
+        "src/less/theme/close.less",
+        "src/less/theme/spinner.less",
+        "src/less/theme/marker.less",
+        "src/less/theme/totop.less",
+        "src/less/theme/alert.less",
+        "src/less/theme/badge.less",
+        "src/less/theme/label.less",
+        "src/less/theme/overlay.less",
+        "src/less/theme/article.less",
+        "src/less/theme/comment.less",
+        "src/less/theme/search.less",
+        "src/less/theme/nav.less",
+        "src/less/theme/navbar.less",
+        "src/less/theme/subnav.less",
+        "src/less/theme/breadcrumb.less",
+        "src/less/theme/pagination.less",
+        "src/less/theme/tab.less",
+        "src/less/theme/slidenav.less",
+        "src/less/theme/dotnav.less",
+        "src/less/theme/thumbnav.less",
+        "src/less/theme/accordion.less",
+        "src/less/theme/drop.less",
+        "src/less/theme/dropdown.less",
+        "src/less/theme/modal.less",
+        "src/less/theme/lightbox.less",
+        "src/less/theme/sticky.less",
+        "src/less/theme/offcanvas.less",
+        "src/less/theme/leader.less",
+        "src/less/theme/iconnav.less",
+        "src/less/theme/notification.less",
+        "src/less/theme/tooltip.less",
+        "src/less/theme/placeholder.less",
+        "src/less/theme/progress.less",
+        "src/less/theme/sortable.less",
+        "src/less/theme/countdown.less",
+        "src/less/theme/animation.less",
+        "src/less/theme/width.less",
+        "src/less/theme/height.less",
+        "src/less/theme/text.less",
+        "src/less/theme/column.less",
+        "src/less/theme/background.less",
+        "src/less/theme/align.less",
+        "src/less/theme/utility.less",
+        "src/less/theme/margin.less",
+        "src/less/theme/padding.less",
+        "src/less/theme/position.less",
+        "src/less/theme/transition.less",
+        "src/less/theme/inverse.less"
+      ]
+    },
+    {
+      "path": "src/less/components/_import.less",
+      "imports": [
+        "src/less/components/variables.less",
+        "src/less/components/mixin.less",
+        "src/less/components/base.less",
+        "src/less/components/link.less",
+        "src/less/components/heading.less",
+        "src/less/components/divider.less",
+        "src/less/components/list.less",
+        "src/less/components/description-list.less",
+        "src/less/components/table.less",
+        "src/less/components/icon.less",
+        "src/less/components/form-range.less",
+        "src/less/components/button.less",
+        "src/less/components/section.less",
+        "src/less/components/container.less",
+        "src/less/components/grid.less",
+        "src/less/components/tile.less",
+        "src/less/components/card.less",
+        "src/less/components/badge.less",
+        "src/less/components/label.less",
+        "src/less/components/nav.less",
+        "src/less/components/Grid.less",
+        "src/less/components/Nav.less",
+        "src/less/components/Icon.less",
+        "src/less/components/Search.less",
+        "src/less/components/subnav.less",
+        "src/less/components/breadcrumb.less",
+        "src/less/components/pagination.less",
+        "src/less/components/tab.less",
+        "src/less/components/dotnav.less",
+        "src/less/components/thumbnav.less",
+        "src/less/components/accordion.less",
+        "src/less/components/slideshow.less",
+        "src/less/components/slider.less",
+        "src/less/components/sticky.less",
+        "src/less/components/offcanvas.less",
+        "src/less/components/switcher.less",
+        "src/less/components/leader.less",
+        "src/less/components/iconnav.less",
+        "src/less/components/notification.less",
+        "src/less/components/tooltip.less",
+        "src/less/components/placeholder.less",
+        "src/less/components/progress.less",
+        "src/less/components/sortable.less",
+        "src/less/components/countdown.less",
+        "src/less/components/animation.less",
+        "src/less/components/width.less",
+        "src/less/components/height.less",
+        "src/less/components/text.less",
+        "src/less/components/column.less",
+        "src/less/components/cover.less",
+        "src/less/components/background.less",
+        "src/less/components/align.less",
+        "src/less/components/svg.less",
+        "src/less/components/utility.less",
+        "src/less/components/margin.less",
+        "src/less/components/padding.less",
+        "src/less/components/position.less",
+        "src/less/components/transition.less",
+        "src/less/components/visibility.less",
+        "src/less/components/inverse.less",
+        "src/less/components/print.less"
+      ]
+    },
+    {
+      "path": "src/less/theme/_import.less",
+      "imports": [
         "src/less/theme/variables.less",
         "src/less/theme/base.less",
         "src/less/theme/link.less",
