--- a/prepros-6.config
+++ b/prepros-6.config
@@ -172,7 +172,9 @@
         "src/less/theme/padding.less",
         "src/less/theme/position.less",
         "src/less/theme/transition.less",
-        "src/less/theme/inverse.less"
+        "src/less/theme/inverse.less",
+        "src/less/app/footer.less",
+        "src/less/app/play-queue.less"
       ]
     },
     {
