Initial Design of Song Playing

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -174,7 +174,8 @@
         "src/less/theme/transition.less",
         "src/less/theme/inverse.less",
         "src/less/app/footer.less",
-        "src/less/app/play-queue.less"
+        "src/less/app/play-queue.less",
+        "src/less/app/song-playing.less"
       ]
     },
     {
