Some Updates To Landing Page Design

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -173,6 +173,8 @@
         "src/less/theme/position.less",
         "src/less/theme/transition.less",
         "src/less/theme/inverse.less",
+        "src/less/app/general.less",
+        "src/less/app/landing-page.less",
         "src/less/app/footer.less",
         "src/less/app/play-queue.less",
         "src/less/app/song-playing.less"
