--- a/prepros-6.config
+++ b/prepros-6.config
@@ -177,7 +177,8 @@
         "src/less/app/landing-page.less",
         "src/less/app/footer.less",
         "src/less/app/play-queue.less",
-        "src/less/app/song-playing.less"
+        "src/less/app/song-playing.less",
+        "src/less/app/favorites.less"
       ]
     },
     {
