--- a/prepros-6.config
+++ b/prepros-6.config
@@ -178,7 +178,8 @@
         "src/less/app/footer.less",
         "src/less/app/play-queue.less",
         "src/less/app/song-playing.less",
-        "src/less/app/favorites.less"
+        "src/less/app/favorites.less",
+        "src/less/app/play-lists.less"
       ]
     },
     {
